# streamlitwikidata

./: README.md  pyproject.toml
src/streamlitwikidata/: app.py
src/streamlitwikidata/fct/: functions.py
