[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "streamlitwikidata"
version = "0.0.1"
authors = [
  { name="Novica Nakov", email="nnovica@gmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/novica/streamlit"
"Bug Tracker" = "https://github.com/novica/streamlit/issues"
